--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,8 @@ input[type="number"]:focus {
   background: rgba(0, 0, 0, 0.1);
 }
 
-input[type="text"]#task-title,
-input[type="number"]#task-timer {
+#task-title,
+#task-timer {
   border: 2px solid rgba(0, 0, 0, 0.1);
   background: rgba(0, 0, 0, 0.1);
 }
