--- a/src/index.css
+++ b/src/index.css
@@ -47,13 +47,14 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
   text-transform: uppercase;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+  &:hover {
+    border-color: #646cff;
+  }
+  &:focus,
+  &:focus-visible {
+    outline: 4px auto -webkit-focus-ring-color;
+  }
 }
 
 svg {
@@ -79,15 +80,14 @@ input[type="number"] {
   font-size: 21px;
   font-weight: 500;
   color: #ffffff;
-}
-input[type="text"]::placeholder,
-input[type="number"]::placeholder {
-  color: rgba(255, 255, 255, 0.5);
-}
-input[type="text"]:focus,
-input[type="number"]:focus {
-  border: 1px solid currentColor;
-  background: rgba(0, 0, 0, 0.1);
+
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.5);
+  }
+  &:focus {
+    border: 1px solid currentColor;
+    background: rgba(0, 0, 0, 0.1);
+  }
 }
 
 #task-title,
@@ -143,9 +143,9 @@ input[type="number"]:focus {
   input[type="text"],
   input[type="number"] {
     color: #000000;
-  }
-  input[type="text"]::placeholder,
-  input[type="number"]::placeholder {
-    color: rgba(0, 0, 0, 0.5);
+
+    &::placeholder {
+      color: rgba(0, 0, 0, 0.5);
+    }
   }
 }
