--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,10 @@ button {
     padding: 5px 8px;
     display: flex;
   }
+  &.text-icon-button {
+    padding: 5px 8px;
+    font-size: 28px;
+  }
 }
 
 svg {
