--- a/src/index.css
+++ b/src/index.css
@@ -134,13 +134,18 @@ input[type="number"] {
 }
 
 .task {
+  transition: opacity ease-in-out 0.5s;
   margin: 20px 0;
   padding: 20px 30px;
   border-radius: 20px;
   background: rgba(0, 0, 0, 0.2);
 
   &.completed {
-    background: rgba(0, 100, 0, 0.2);
+    opacity: 0.5;
+
+    &:hover {
+      opacity: 1;
+    }
   }
 }
 
@@ -150,6 +155,10 @@ input[type="number"] {
   font-weight: 700;
   min-width: 200px;
   text-align: left;
+
+  &.active {
+    color: #00ee00;
+  }
 }
 
 
