--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ input[type="number"] {
   }
 }
 
-#task-title,
+#task-name,
 #task-timer {
   border: 2px solid rgba(0, 0, 0, 0.1);
   background: rgba(0, 0, 0, 0.1);
