--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,17 @@ h1 {
   }
 }
 
+h2 {
+}
+
+.heading-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1em;
+  padding-left: 30px;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -75,14 +86,14 @@ button {
 
     svg {
       fill: currentColor;
-      width: 22px;
-      height: 22px;
+      width: 36px;
+      height: 36px;
     }
     &.done-icon {
       padding: 8px 12px;
       svg {
-        width: 26px;
-        height: 26px;
+        width: 32px;
+        height: 32px;
       }
     }
 
@@ -153,7 +164,7 @@ input[type="number"] {
   gap: 1em;
   align-items: center;
   justify-content: space-between;
-  margin: 20px 0;
+  margin: 0 0 20px;
   padding: 40px 30px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
