--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
-#root {
+#root,
+header {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+header {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .card {
