--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,9 @@ header {
 header {
   padding-top: 0;
   padding-bottom: 0;
+  position: fixed;
+  left: auto;
+  right: auto;
 }
 
 .card {
@@ -20,5 +23,6 @@ header {
 }
 
 .list-wrap {
+  padding-top: 130px;
   padding-bottom: 20px;
 }
