--- a/src/index.css
+++ b/src/index.css
@@ -95,6 +95,10 @@ button {
   &:focus-visible {
     outline: 1px auto -webkit-focus-ring-color;
   }
+  &:disabled {
+    cursor: not-allowed;
+    background-color: transparent;
+  }
 
   &.w-icon {
     padding: 5px 8px;
